--- a/nbsapp/src/components/NavBar/NavBar.css
+++ b/nbsapp/src/components/NavBar/NavBar.css
@@ -1,7 +1,7 @@
 header{
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     height: 150px;
     width: 100%;
     grid-area: nav;
