--- a/nbsapp/src/components/ItemCount/ItemCount.css
+++ b/nbsapp/src/components/ItemCount/ItemCount.css
@@ -22,3 +22,9 @@
 .aviso{
     margin-top: 8px;
 }
+.container-class{
+    display: flex !important!;
+    flex-direction: column !important;
+    justify-content: center !important;
+    align-items: center !important;
+}
