--- a/nbsapp/src/index.css
+++ b/nbsapp/src/index.css
@@ -11,3 +11,9 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.container-class{
+  display: flex !important!;
+  flex-direction: column !important;
+  justify-content: center !important;
+  align-items: center !important;
+}
