--- a/nbsapp/src/components/ItemDetail/ItemDetail.css
+++ b/nbsapp/src/components/ItemDetail/ItemDetail.css
@@ -1,8 +1,27 @@
-.popupCard{
-    display: flex !important;
-    flex-direction: column !important;
-    justify-tracks: center !important;
-    align-items: center !important;
-    width: 600px ;
-    color: azure !important;
+.detailCard{
+    display: flex;
+    flex-direction: row;
+    gap: 150px;
+    justify-content: space-evenly;
+    align-items: center;
+    text-align: center;
+}
+.detailModel{
+    text-align: center;
+    margin-top: 12px;
+    margin-bottom: 50px;
+}
+.detailInfo{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+    margin-bottom: 200px;
+}
+.linkRemeras{
+    text-decoration: none;
+    color: azure;
+}
+.imageDetail{
+    width: 380px;
+    height: 400px;
 }
