--- a/nbsapp/src/components/ItemDetail/ItemDetail.css
+++ b/nbsapp/src/components/ItemDetail/ItemDetail.css
@@ -14,8 +14,11 @@
 .detailInfo{
     display: flex;
     flex-direction: column;
-    gap: 40px;
-    margin-bottom: 200px;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    margin-bottom: 100px;
+    margin-top: 90px;
 }
 .linkRemeras{
     text-decoration: none;
