--- a/nbsapp/src/components/CartWidget/CartWidget.css
+++ b/nbsapp/src/components/CartWidget/CartWidget.css
@@ -2,5 +2,11 @@
     width: 90px;
     height: 90px;
     margin-top: 45px;
-    margin-left: 150px;
+    margin-right: 20px;
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+}
+.cartNotification{
+    margin-top: 6px;
 }
